# princeamds-code

./: ProjectHome.md
Bash/: babene.sh  nod32upd
Bash/E17-Build-Script-Arch/: build-e17
Bash/E17-Build-Script-Arch/makepkgs/e_dbus-svn/: PKGBUILD
Bash/E17-Build-Script-Arch/makepkgs/edje-svn/: PKGBUILD
Bash/E17-Build-Script-Arch/makepkgs/eio-svn/: PKGBUILD
Bash/E17-Build-Script-Arch/makepkgs/elementary-svn/: PKGBUILD
Bash/E17-Build-Script-Arch/makepkgs/embryo-svn/: PKGBUILD
Bash/E17-Build-Script-Arch/makepkgs/emprint-svn/: PKGBUILD
Bash/E17-Build-Script-Arch/makepkgs/enki-svn/: PKGBUILD
Bash/E17-Build-Script-Arch/makepkgs/ephoto-svn/: PKGBUILD
C/ewallset/: AUTHORS  README  configure.ac
C/remote/: AUTHORS  configure.ac  e-module-remote.edc  module.desktop.in
C/remote/data/tools/: Makefile.am  (+1 more)
C/remote/src/: Makefile.am  e_mod_main.c  ermc_client.c
PATCH/: conf_theme.patch  fileman.patch  new_qoslimit.c  temp_module
PHP/DKG/: cgi-updater.php  readme
PHP/dkg/: theme.php
PHP/dkg/gallery/: Readme
Python/smb-admin/: setup.py
Python/smb-admin/src/: smb-admin
Python/smb-browser/src/: smb-browser
trunk/Bash/: kindgirls_2.0.sh  rapidget
trunk/Bash/E17-Build-Script-Arch/: build-e17
trunk/C/ewallset/: configure.ac
trunk/C/remote/: Makefile.am  TODO  configure.ac
trunk/PATCH/: conf_theme.patch  e_src_bin.patch  new-qoslimit.asp
trunk/PHP/DKG/: index.php
trunk/PHP/dkg/: config.inc.php  gentumb  mysql_gallery.php
trunk/PHP/scripts/: nodupdate.php
trunk/Python/: gtk-icon-themes.py
trunk/Python/smb-browser/: setup.py
(+20 files in other folders)
